# gameAmbiance

./: CMakeLists.txt  LICENSE  README.md  main.cpp
base/: type_defs.h
hw/: bus_driver_interface.h  bus_driver_spi.cpp  bus_driver_spi.h  camera_driver_interface.h  camera_driver_opencv.cpp  camera_driver_opencv.h  camera_driver_raspi.cpp  camera_driver_raspi.h  display_driver_interface.h  display_driver_ssd1306.cpp  display_driver_ssd1306.h  display_pixel_driver_interface.h
ui/: display_area.cpp  display_area.h  display_font.cpp  display_font.h  display_font_5x7.cpp  display_font_5x7.h  keyboard.cpp  keyboard.h  progress_bar.cpp  progress_bar.h
